--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gustogroove</title>
 </head>
 <body>
-    
+        <div class="container">
+            <div class="logo">
+                <img src="img/GustoGroove_white-1-removebg-preview.png" alt="logo">
+                </div>
+                <nav>
+                    <ul>
+                        <div class="dropdown">
+                            <button class="dropbtn">News</button>
+                            <div class="drop-content">
+                        <li><a href="#">Local</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">World</a></li>
+                        <li><a href="#">Politics</a></li>
+                        <li><a href="#">View all</a></li>
+                        </div>
+                        </div>
+                        <li><a href="#">Lifestyle</a></li>
+                        <li><a href="#">Entertainment</a></li>
+                        <li><a href="#">Business</a></li>
+                        <li><a href="#">Videos</a></li>
+                        <li><a href="#">Sports</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">.....</a></li>
+                        </ul>
+                </nav>
+        </div>
 </body>
 </html>
