--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gustogroove</title>
 </head>
 <body>
+    <header>
         <div class="container">
             <div class="logo">
-                <img src="img/GustoGroove_white-1-removebg-preview.png" alt="logo">
+                <img src="img/GustoGroove_white-1-removebg-preview.png" class="image" alt="logo">
                 </div>
                 <nav>
                     <ul>
                         <div class="dropdown">
-                            <button class="dropbtn">News</button>
+                            <a class="dropbtn" href="#">News</a>
                             <div class="drop-content">
                         <li><a href="#">Local</a></li>
                         <li><a href="#">Business</a></li>
@@ -23,15 +25,67 @@
                         <li><a href="#">View all</a></li>
                         </div>
                         </div>
-                        <li><a href="#">Lifestyle</a></li>
-                        <li><a href="#">Entertainment</a></li>
-                        <li><a href="#">Business</a></li>
+                        <div class="dropdown">
+                            <a class="dropbtn" href="#">Lifestyle</a>
+                            <div class="drop-content">
+                                <li><a href="#">Beauty</a></li>
+                                <li><a href="#">Food & Travel</a></li>
+                                <li><a href="#">Careers</a></li>
+                                <li><a href="#">View all</a></li>
+                                <div class="second-part">
+                                    <li><a href="#">Technology</a></li>
+                                    <li><a href="#">Relationships & Wedding</a></li>
+                                    <li><a href="#">Events</a></li>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <a class="dropbtn" href="#">Entertainment</a>
+                            <div class="drop-content">
+                                <li><a href="#">Music</a></li>
+                                <li><a href="#">Celebrities</a></li>
+                                <li><a href="#">Movies</a></li>
+                                <li><a href="#">View all</a></li>
+                            </div>
+                        </div>
+                        <div class="dropdown">
+                            <a class="dropbtn" href="#">Business</a>
+                            <div class="drop-content">
+                                <li><a href="#">Domestic</a></li>
+                                <li><a href="#">International Business</a></li>
+                                <li><a href="#">View all</a></li>
+                            </div>
+                        </div>
                         <li><a href="#">Videos</a></li>
                         <li><a href="#">Sports</a></li>
                         <li><a href="#">Careers</a></li>
-                        <li><a href="#">.....</a></li>
+                        <li><a href="#">...</a></li>
+                        <li>
+                            <a href="#" class="icon">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </a>
+                        </li>
                         </ul>
                 </nav>
+        </div>
+        </header>
+        <div class="body">
+            <div class="box">
+                <div class="image-gallery">
+                    <div class="gallery-item">
+                        <a target="_blank" href="img/GustoGroove.png">
+                            <img src="img/GustoGroove.png" alt="guto" class="gallery-img">
+                        </a>
+            </div>
+        </div>
+        <div class="beneath">
+                        <div class="top-desc">Movies</div>
+                        <div class="description">Lagos is the only african 
+                            city going to cannes this year</div>
+                    </div>
+                </div>
+                </div>
+        </div>
         </div>
 </body>
 </html>
